Event Booking Application completed